--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: stretch;
-    border-style: solid;
 }
 
 .inner-display, .inner-buttons {
@@ -50,5 +48,13 @@ body {
     border-radius: 4px;
     width: 80px;
     height: 60px;
+}
+
+.buttons-1 {
+    margin-top: -18px;
+}
+
+.buttons-4 {
+    margin-bottom: -18px;
 }
 
