Added other operator functions and button click color

--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,7 @@ button:hover {
     background-color: #cdced1;
     /*Make it #91908d on click*/
 }
+
+button:active {
+    background-color: #91908d;
+}
